--- a/market/templates/market/my_account.html
+++ b/market/templates/market/my_account.html
@@ -17,7 +17,7 @@
     <li class="list-group-item"> 当前收益：{{client.profit}}</li>
 
   </ul>
-</p></br>
+</p>
 
 <h2>
   <span class="label label-primary">当前持仓</span>
@@ -76,8 +76,7 @@
               <th>证券代码</th>
               <th>委托方向</th> <th>委托价格</th> <th>委托数量</th>
               <th>委托时间</th> 
-              <th>成交价格</th> <th>成交数量</th>
-              <th>交易对方</th> <th>交易时间</th>
+              <th>成交均价</th> <th>成交数量</th>
             </tr>
           </thead>
           
@@ -85,21 +84,71 @@
             {% if commission %}
               {% for com in commission %}
                 <tr>
-                  <td><a href="#">{{com.stock_symbol}}</a></td>
-                  <td>{{com.operation}}</td>
+                  <td><a href="{{ com.stock_corr.get_absolute_url }}">{{com.stock_symbol}}</a></td>
+                  <td>
+                    {% if com.operation == 'b' %}
+                      买入
+                    {% else %}
+                      卖出
+                    {% endif %}
+                  </td>
                   <td>{{com.price_committed}}</td>
                   <td>{{com.vol_committed}}</td>
                   <td>{{com.date_committed}}</td>
                   <td>{{com.price_traded}}</td>
                   <td>{{com.vol_traded}}</td>
-                  <td>{{com.opponent_traded|default_if_none:"--"}}</td>
-                  <td>{{com.data_traded}}</td>
                </tr>
               {% endfor %}
             {% else %}
               <tr>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td> <td>&nbsp;</td> <td>&nbsp;</td>
+                <td>&nbsp;</td> <td>&nbsp;</td> <td>&nbsp;</td>
+              </tr>
+            {% endif %}
+          </tbody>
+          
+        </table>
+      </div>
+    </div>
+</p>
+
+<h2>
+  <span class="label label-info">当前成交</span>
+</h2>
+<p style="line-height:1.6">
+    <div class="row">
+      <div class="col-md-12">
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>证券代码</th>
+              <th>成交方向</th> <th>成交价格</th> <th>成交数量</th>
+              <th>成交时间</th> <th>成交对方</th>
+            </tr>
+          </thead>
+          
+          <tbody>
+            {% if transaction %}
+              {% for tran in transaction %}
+                <tr>
+                  <td><a href="#">{{tran.stock_symbol}}</a></td>
+                  <td>
+                    {% if tran.operation == 'b' %}
+                      买入
+                    {% else %}
+                      卖出
+                    {% endif %}
+                  </td>
+                  <td>{{tran.price_traded}}</td>
+                  <td>{{tran.vol_traded}}</td>
+                  <td>{{tran.date_traded}}</td>
+                  <td>{{tran.counterpart}}</td>
+               </tr>
+              {% endfor %}
+            {% else %}
+              <tr>
+                <td>&nbsp;</td>
                 <td>&nbsp;</td> <td>&nbsp;</td> <td>&nbsp;</td>
                 <td>&nbsp;</td> <td>&nbsp;</td>
               </tr>
@@ -109,7 +158,7 @@
         </table>
       </div>
     </div>
-</p></br>
+</p>
 
 <h2>
   <span class="label label-warning">关注列表</span>
