--- a/market/templates/market/base.html
+++ b/market/templates/market/base.html
@@ -59,6 +59,10 @@
           </li>
           
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'market:sim_welcome' %}">股市模拟</a>
+          </li>
+          
+          <li class="nav-item">
             <a class="nav-link href="#">联系我们</a>
           </li>
           
@@ -92,5 +96,6 @@
     </div> <!-- /container -->
     
   </body>
+
 </html>
     
