--- a/market/templates/market/simulator/simulator_welcome.html
+++ b/market/templates/market/simulator/simulator_welcome.html
@@ -4,7 +4,9 @@
   <div class="jumbotron">
     <h1>{{user.username}}</h1>
     <p>欢迎进入股市模拟系统，当前的虚拟时间是：<strong>{{datetime}} </strong></p>
-    <p><a class="btn btn-primary btn-lg" href="{% url 'market:sim_main' %}" role="button">点击开始股市模拟</a></p>
+    <p><a class="btn btn-primary btn-lg" href="{% url 'market:sim_main' %}" role="button">开始股市模拟</a>
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <a class="btn btn-danger btn-lg" href="{% url 'market:sim_reset' %}" role="button">重置虚拟股市</a></p>
   </div>
 {% endblock header %}
 
@@ -15,4 +17,6 @@
     能进行交易的股票数目为：<strong><a href="{% url 'market:all_v_stocks' %}">{{num_stocks}}</a></strong></br>
     当前的虚拟TICK为：<strong>{{tick}} </strong></br> 
   </p>
+  <a class="btn btn-primary btn-lg" href="{% url 'market:sim_import' %}" role="button">导入股票数据</a>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-danger btn-lg" href="{% url 'market:sim_reset_all'  %}" role="button">重置全部数据</a>
 {% endblock content %}
