--- a/market/templates/market/simulator/simulator_welcome.html
+++ b/market/templates/market/simulator/simulator_welcome.html
@@ -6,6 +6,8 @@
     <p>欢迎进入股市模拟系统，当前的虚拟时间是：<strong>{{datetime}} </strong></p>
     <p><a class="btn btn-primary btn-lg" href="{% url 'market:sim_main' %}" role="button">开始股市模拟</a>
     &nbsp;&nbsp;&nbsp;&nbsp;
+    <a class="btn btn-success btn-lg" href="{% url 'market:sim_anchor' %}" role="button">切换时间截面</a>
+    &nbsp;&nbsp;&nbsp;&nbsp;
     <a class="btn btn-danger btn-lg" href="{% url 'market:sim_reset' %}" role="button">重置虚拟股市</a></p>
   </div>
 {% endblock header %}
@@ -13,8 +15,8 @@
 {% block content %}
   <p style="font-size:24px; line-height:2.0">
     虚拟股市中的账户数目为：<strong>{{num_clients}} </strong></br> 
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;非用户控制的数目为：<strong>{{num_v_clients}} </strong></br>
-    能进行交易的股票数目为：<strong><a href="{% url 'market:all_v_stocks' %}">{{num_stocks}}</a></strong></br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'market:sim_clients' %}">非用户控制的数目为：<strong>{{num_v_clients}} </strong></a></br>
+    <a href="{% url 'market:sim_stocks' %}">能进行交易的股票数目为：<strong>{{num_stocks}}</strong></a></br>
     当前的虚拟TICK为：<strong>{{tick}} </strong></br> 
   </p>
   <a class="btn btn-primary btn-lg" href="{% url 'market:sim_import' %}" role="button">导入股票数据</a>
