--- a/market/templates/market/simulator/v_stock.html
+++ b/market/templates/market/simulator/v_stock.html
@@ -1,12 +1,18 @@
 {% extends "market/base.html" %}
 
 {% block header %}
-  <h1>{{stock.symbol}}({{stock.name}})(模拟环境)</h1>
+  <h1>
+    {{ stock.symbol }}({{ time }})(模拟环境)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a class="btn btn-info btn-lg" href="{{ stock.get_absolute_url }}" role="button">当日数据</a>
+    &nbsp;&nbsp;
+    <a class="btn btn-info btn-lg" href="{{ stock.get_daily_absolute_url }}" role="button">历史数据</a>
+  </h1>
 {% endblock header %}
 
 {% block content %}
+<div id="container" style="width: 1200px;height:400px;"></div>
 <p style="line-height:1.6">
-  <h2>走势{{stock.datetime}}</h2>
+  <h2>走势</h2>
   <ul class="list-group">
     <li class="list-group-item"> 最新价：{{stock.last_price}}</li>
     <li class="list-group-item"> 最高价：{{stock.high}}</li>
@@ -15,7 +21,7 @@
     <li class="list-group-item"> 跌停价：{{stock.limit_down}}</li>
   </ul>
   
-  <h2>档口</h2>
+  <h2>盘口</h2>
   <ul class="list-group">
     {% for lv in level5_ask %}
       <li class="list-group-item"> 卖{{forloop.revcounter}}：{{lv.0|default_if_none:"--"}}&nbsp;&nbsp;{{lv.1|default_if_none:"--"}}</li> 
@@ -29,7 +35,34 @@
     <li class="list-group-item"> 交易量：{{stock.volume}}</li>
     <li class="list-group-item"> 交易额：{{stock.amount}}</li>
   </ul>
-
 </p>
+
+    <script src="http://cdn.highcharts.com.cn/highcharts/highcharts.js"></script>
+    <script>
+        var options = {
+            chart: {
+                type: 'line'
+            },
+            title: {
+                text: '价格走势'
+            },
+            xAxis: {
+              title: {
+                text: '时间'
+                },
+              categories: {{time_log|safe}}
+            },
+            yAxis: {
+                title: {
+                    text: '价格'
+                }
+            },
+            series: [{
+                name: '',
+                data: {{price_log|safe}}
+            },]
+        };
+        var chart = Highcharts.chart('container', options);
+    </script>
 
 {% endblock content %}
