--- a/market/templates/market/simulator/v_stock.html
+++ b/market/templates/market/simulator/v_stock.html
@@ -2,10 +2,12 @@
 
 {% block header %}
   <h1>
-    {{ stock.symbol }}({{ time }})(模拟环境)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    {{ stock.symbol }}({{ time }})(模拟环境)
     <a class="btn btn-info btn-lg" href="{{ stock.get_absolute_url }}" role="button">当日数据</a>
-    &nbsp;&nbsp;
+    
     <a class="btn btn-info btn-lg" href="{{ stock.get_daily_absolute_url }}" role="button">历史数据</a>
+
+    <a class="btn btn-info btn-lg" href="{{ stock.get_tick_absolute_url }}" role="button">tick截面</a>
   </h1>
 {% endblock header %}
 
