complete gail for market

--- a/market/templates/market/simulator/simulator_welcome.html
+++ b/market/templates/market/simulator/simulator_welcome.html
@@ -4,7 +4,7 @@
   <div class="jumbotron">
     <h1>{{user.username}}</h1>
     <p>欢迎进入股市模拟系统，当前的虚拟时间是：<strong>{{datetime}} </strong></p>
-    <p><a class="btn btn-primary btn-lg" href="{% url 'market:sim_main' %}" role="button">开始股市模拟</a>
+    <p><a class="btn btn-primary btn-lg" href="{% url 'market:gail_main' %}" role="button">开始股市模拟</a>
     &nbsp;&nbsp;&nbsp;&nbsp;
     <a class="btn btn-success btn-lg" href="{% url 'market:sim_anchor' %}" role="button">切换时间截面</a>
     &nbsp;&nbsp;&nbsp;&nbsp;
